2006-03-07  Callum McKenzie  <callum@spooky-possum.org>

	* keyboard.h: 
	* keyboard.c: Don't upper-case key-presses. This allows alphabetic
	keys to be used as controls. Fixes bug #333696.

2006-02-18  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots.c: Use the new SVG file for the appicon, not the old PNG
	one.

2006-02-10  Callum McKenzie  <callum@spooky-possum.org>

	* game.c: Set up the temporary arena correctly when testing for
	safe teleports. Also restore the AWOL logic for checking that we
	aren't over-using safe teleports. Also make sure the player is
	killed properly (and factorise out the code to do it).
	(message_box): Update to use gtk_message_dialog.

2006-01-25  Callum McKenzie  <callum@spooky-possum.org>

	* game.c: If we run out of spaces to move or teleport to in the
	safe-moves and safe-teleport mode we declare the game over and log
	a high score (See bug #107846). Also added the safe_teleport_available
	function to assist this.

2006-01-17  Callum McKenzie  <callum@spooky-possum.org>

	* Makefile.am: 
	* gnobots2.desktop.in: Replace the PNG icon with an SVG icon from
	Nicu Buculei.

	* gnobots.c: Patch from Scott Bronson to ensure user-edited
	accelerators are saved (bug #327280).

2006-01-16  Callum McKenzie  <callum@spooky-possum.org>

	* robots.png: New graphics from Nicu Buculei. Also added the
	source robots.svg file for future use.

2006-01-12  Richard Hoelscher  <rah@rahga.com>

	* game.c (mouse_cb): Fix safe moves + mouse control. See bug #169765.

2005-10-02  Callum McKenzie  <callum@spooky-possum.org>

	* graphics.c (set_background_color): Use gtk_widget_modify_bg
	rather than setting the GdkWindow background colour directly. This
	stops it being overwritten. See bug #317522.

2005-08-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/da/gnobots2.xml:
	* help/C/gnobots2.xml: Remove the mention of the
	no-longer-existing bug reporting guidelines. See bug #312723.

2005-07-31  Callum McKenzie  <callum@physics.otago.ac.nz>