@@ -667,25 +667,13 @@ Any changes you make take effect immediately and are automatically saved.
     <title>Authors</title>
     <para>
       <application>GNOME Robots</application> was written by Mark Rae
-      (<email>m.rae@inpharmatica.co.uk</email>). Please send all comments, suggestions, and bug
-      reports to the <ulink url="http://bugs.gnome.org" type="http">GNOME
-      bug tracking database</ulink>. You can also use <application>Bug Report
-      Tool</application> (<command>bug-buddy</command>), available in the
-      <guisubmenu>Utilities</guisubmenu> submenu of <guimenu>Main
-      Menu</guimenu>, for submitting bug reports.
-    </para>
-
-    <para>
+      (<email>m.rae@inpharmatica.co.uk</email>). 
       This manual was written by Patanjali Somayaji
       (<email>patanjali@mindless.com</email>), from the original 
-      HTML documentation by Mark Rae. Please send all comments and
-      suggestions regarding this manual to the <ulink type="http"
-      url="http://developer.gnome.org/projects/gdp">GNOME Documentation
-      Project</ulink> by sending an email to
-      <email>docs@gnome.org</email>. You can also add your comments
-      online by using the <ulink type="http"
-      url="http://developer.gnome.org/projects/gdp/doctable/">GNOME
-      Documentation Status Table</ulink>.
+      HTML documentation by Mark Rae.
+   To report a bug or make a suggestion regarding this application or
+   this manual, follow the directions in this 
+   <ulink url="ghelp:gnome-feedback" type="help">document</ulink>.
     </para>
 
     <!-- For translations: uncomment this:
